# CodeAlly

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  mypy.txt  pyproject.toml  requirements-dev.txt  requirements.txt  results.txt  setup.py  verify_dir_tree.py
.github/workflows/: ci-shared.yml  ci.yml  lint.yml  publish.yml  release.yml  tests.yml
ally/: conversation_20250405_111605.json
code_ally/: __init__.py  agent.py  agent.py.bak  config.json  config.py  main.py  service_registry.py  trust.py
code_ally/agent/: __init__.py  agent.py  command_handler.py  error_handler.py  permission_manager.py  task_planner.py  token_manager.py  tool_manager.py  ui_manager.py
code_ally/agent/examples/: bash_script_plan_example.py  task_plan_example.py  task_planning_tutorial.md
code_ally/llm_client/: ollama_client.py
code_ally/prompts/: __init__.py  directory_config.py  directory_utils.py  system_messages.py
code_ally/prompts/tool_guidance/: bash.py  default.py  file.py  git.py
code_ally/tools/: __init__.py  base.py  bash.py  batch.py  code.py  directory.py  edit.py  glob.py  grep.py  plan.py  read.py  refactor.py  write.py
tests/: README.md  __init__.py  conftest.py  test_directory_tree.py  test_helper.py
tests/agent/: test_agent.py  test_token_manager.py  test_tool_manager.py
tests/cli/: __init__.py  test_cli.py
tests/llm_client/: __init__.py  test_model_client.py
tests/prompts/: __init__.py
tests/tools/: test_base_tool.py
tools/: version.py
