[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code_ally"
version = "0.4.4"
description = "A local LLM-powered pair programming assistant"
readme = "README.md"
authors = [
    {name = "Ben H Moore", email = "ben@benhmoore.com"}
]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]
keywords = ["llm", "ai", "pair programming", "code assistant", "development"]
dynamic = ["optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/benhmoore/code-ally"
"Bug Tracker" = "https://github.com/benhmoore/code-ally/issues"

[project.scripts]
ally = "code_ally.main:main"

# Keeping original setup.py for backward compatibility
# but the metadata above will take precedence

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 88